<resources>
    <string name="app_name">morlerino_test</string>
    <string name="player_bottom_margin">64dp</string>
    <string name="home_present_text">WELCOME</string>
    <string name="best_score_text">BEST SCORE</string>
    <string name="play_button_text">START PLAY</string>
    <string name="settings_button_text">SETTINGS</string>
    <string name="loss_speakable_text">GAME OVER</string>
    <string name="settings_speakable_text">SETTINGS</string>
    <string name="complexity_text">COMPLEXITY</string>
    <string name="hard_button_text">HARD</string>
    <string name="easy_button_text">EASY</string>
    <string name="medium_button_text">MEDIUM</string>
    <string name="save_settings_button_text">SAVE</string>
    <string name="typed_points_text">YOU TYPED POINTS</string>
    <string name="try_again_button_text">REPEAT</string>
    <string name="shot_button_text">SHOT</string>
    <string name="go_home_button_text">HOME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>