<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.SettingsFragment"
    android:background="@drawable/space">


    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/starwars"
        android:rotationX="33"
        android:text="@string/settings_speakable_text"
        android:textColor="@color/text_color"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:rotationX="33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsText">

        <TextView
            android:id="@+id/complexityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/starwars"
            android:gravity="center"
            android:text="@string/complexity_text"
            android:textColor="@color/text_color"
            android:textSize="60sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/hardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/starwars"
                android:text="@string/easy_button_text"
                android:textColor="@color/text_color"
                android:textSize="48sp" />

            <RadioButton
                android:id="@+id/mediumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/starwars"
                android:text="@string/medium_button_text"
                android:textColor="@color/text_color"
                android:textSize="48sp" />

            <RadioButton
                android:id="@+id/easyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/starwars"
                android:text="@string/hard_button_text"
                android:textColor="@color/text_color"
                android:textSize="48sp" />
        </RadioGroup>

    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:id="@+id/saveSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/starwars"
        android:rotationX="33"
        android:text="@string/save_settings_button_text"
        android:textColor="@color/text_color"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>